default color change

--- a/public/css/theme-default.css
+++ b/public/css/theme-default.css
@@ -331,7 +331,7 @@ li {
   color: #111111;
 }
 .homec-primary-color {
-  color: #7166f0 !important;
+  color: #a3a3a3 !important;
 }
 .homec-second-color {
   color: #f2c94c;
