--- a/public/css/theme-default.css
+++ b/public/css/theme-default.css
@@ -319,7 +319,7 @@ li {
   transition: all 0.3s ease;
 }
 .homec-bg-primary-color {
-  background-color: #7166f0;
+  background-color: #222933;
 }
 .homec-bg-second-color {
   background-color: #111111;
