--- a/public/css/multirangeSlider.css
+++ b/public/css/multirangeSlider.css
@@ -32,7 +32,7 @@
   border-radius: 0px 10px 10px 0px;
 }
 .range-slider .bar-inner {
-  background-color: #6f64f0;
+  background-color: #586472;
   display: flex;
   flex-grow: 1;
   flex-shrink: 1;
