--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1067,7 +1067,7 @@ input[type="checkbox"]:checked::before {
   position: absolute;
   top: 30px;
   right: 30px;
-  background: #f2c94c;
+  background: #fff;
 }
 
 .homec-amount-card.homec-amount-card__sticky .homec-amount-card__amount,
