--- a/public/css/theme-default.css
+++ b/public/css/theme-default.css
@@ -1597,7 +1597,7 @@ object {
   width: 100px;
   height: 100px;
   border-radius: 100%;
-  background: #7166f0;
+  background: #586472;
   -webkit-animation: preloader-fx 1.6s linear infinite;
   animation: preloader-fx 1.6s linear infinite;
 }
