--- a/public/css/style.css
+++ b/public/css/style.css
@@ -4704,7 +4704,7 @@ blockquote::before {
 .homec-contact__icon {
   width: 74px;
   height: 74px;
-  background: #eceaff;
+  background: #ffffff;
   text-align: center;
   border-radius: 100%;
   align-items: center;
@@ -4712,7 +4712,7 @@ blockquote::before {
   justify-content: center;
 }
 .homec-contact__icon svg {
-  fill: #7166f0;
+  fill: #222933;
 }
 .homec-contact__single {
   display: flex;
